[setting]#3 - 데이터 확정 후 EDA

--- a/EDA/Data_Transform.ipynb
+++ b/EDA/Data_Transform.ipynb
@@ -10,27 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "92b4a03a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e9017898",
+   "id": "0f87eff5",
    "metadata": {},
    "source": [
-    "## Data 정보 확인"
+    "# 제주도 전력 수요량 시간별 데이터 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "33baf050",
+   "execution_count": 9,
+   "id": "e944001c",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,53 @@
     }
    ],
    "source": [
-    "raw_path = \"/Volumes/X31/프로젝트/Opensource-project-25-2/Data/제주도_전력 수요량 시간별 데이터_2021~2023.csv\"\n",
+    "raw_path = \"/Volumes/X31/프로젝트/에너지 AI/Opensource-project-25-2/Data/제주도_전력 수요량 시간별 데이터_2021~2023.csv\"\n",
+    "try:\n",
+    "    df = pd.read_csv(raw_path, encoding=\"utf-8\")\n",
+    "except UnicodeDecodeError:\n",
+    "    try:\n",
+    "        df = pd.read_csv(raw_path, encoding=\"cp949\")\n",
+    "    except Exception:\n",
+    "        df = pd.read_csv(raw_path, encoding=\"euc-kr\", errors=\"replace\")\n",
+    "\n",
+    "print(df.info())\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a775c50a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 166896 entries, 0 to 166895\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column      Non-Null Count   Dtype  \n",
+      "---  ------      --------------   -----  \n",
+      " 0   거래일자        166896 non-null  object \n",
+      " 1   거래시간        166896 non-null  int64  \n",
+      " 2   지역          166896 non-null  object \n",
+      " 3   연료원         166896 non-null  object \n",
+      " 4   전력거래량(MWh)  166896 non-null  float64\n",
+      "dtypes: float64(1), int64(1), object(3)\n",
+      "memory usage: 6.4+ MB\n",
+      "None\n",
+      "         거래일자  거래시간   지역  연료원  전력거래량(MWh)\n",
+      "0  2024-01-01     1  강원도  태양광         0.0\n",
+      "1  2024-01-01     2  강원도  태양광         0.0\n",
+      "2  2024-01-01     3  강원도  태양광         0.0\n",
+      "3  2024-01-01     4  강원도  태양광         0.0\n",
+      "4  2024-01-01     5  강원도  태양광         0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_path = \"/Volumes/X31/프로젝트/에너지 AI/Opensource-project-25-2/Data/한국전력거래소_지역별 시간별 태양광 및 풍력 발전량_20241231 (1).csv\"\n",
     "try:\n",
     "    df = pd.read_csv(raw_path, encoding=\"utf-8\")\n",
     "except UnicodeDecodeError:\n",
@@ -74,19 +120,156 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fdc73ea4",
+   "metadata": {},
+   "source": [
+    "## 한국전력거래소_지역별 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2283ad8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 55848 entries, 0 to 55847\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   일시            55848 non-null  object \n",
+      " 1   기온            55848 non-null  float64\n",
+      " 2   강수량(mm)       55848 non-null  float64\n",
+      " 3   습도            55848 non-null  float64\n",
+      " 4   적설(cm)        55848 non-null  float64\n",
+      " 5   전운량(10분위)     55848 non-null  int64  \n",
+      " 6   일조(hr)        55848 non-null  float64\n",
+      " 7   일사량           55848 non-null  float64\n",
+      " 8   태양광 설비용량(MW)  55848 non-null  float64\n",
+      " 9   태양광 발전량(MWh)  54113 non-null  float64\n",
+      "dtypes: float64(8), int64(1), object(1)\n",
+      "memory usage: 4.3+ MB\n",
+      "None\n",
+      "                 일시   기온  강수량(mm)    습도  적설(cm)  전운량(10분위)  일조(hr)  일사량  \\\n",
+      "0  2018-01-01 00:00  6.8      0.0  44.0     0.0          6     0.0  0.0   \n",
+      "1  2018-01-01 01:00  7.1      0.0  46.0     0.0          0     0.0  0.0   \n",
+      "2  2018-01-01 02:00  7.0      0.0  63.0     0.0          0     0.0  0.0   \n",
+      "3  2018-01-01 03:00  6.9      0.0  58.0     0.0          9     0.0  0.0   \n",
+      "4  2018-01-01 04:00  6.8      0.0  63.0     0.0          9     0.0  0.0   \n",
+      "\n",
+      "   태양광 설비용량(MW)  태양광 발전량(MWh)  \n",
+      "0       122.288           0.0  \n",
+      "1       122.288           0.0  \n",
+      "2       122.288           0.0  \n",
+      "3       122.288           0.0  \n",
+      "4       122.288           0.0  \n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'지역'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m/Volumes/X31/프로젝트/에너지 AI/Opensource-project-25-2/.env/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: '지역'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(df.head())\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# 제주도 데이터만 필터링\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m df_jeju = df[\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m지역\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m == \u001b[33m'\u001b[39m\u001b[33m제주도\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m제주도 데이터:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(df_jeju.info())\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/Volumes/X31/프로젝트/에너지 AI/Opensource-project-25-2/.env/lib/python3.12/site-packages/pandas/core/frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4112\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4115\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/Volumes/X31/프로젝트/에너지 AI/Opensource-project-25-2/.env/lib/python3.12/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: '지역'"
+     ]
+    }
+   ],
+   "source": [
+    "raw_path = \"/Volumes/X31/프로젝트/에너지 AI/Opensource-project-25-2/Data/한국동서발전(주)_제주 기상관측 및 태양광 발전 현황_20240531.csv\"\n",
+    "try:\n",
+    "    df = pd.read_csv(raw_path, encoding=\"utf-8\")\n",
+    "except UnicodeDecodeError:\n",
+    "    try:\n",
+    "        df = pd.read_csv(raw_path, encoding=\"cp949\")\n",
+    "    except Exception:\n",
+    "        df = pd.read_csv(raw_path, encoding=\"euc-kr\", errors=\"replace\")\n",
+    "\n",
+    "print(df.info())\n",
+    "print(df.head())\n",
+    "\n",
+    "# 제주도 데이터만 필터링\n",
+    "df_jeju = df[df['지역'] == '제주도']\n",
+    "\n",
+    "print(\"\\n제주도 데이터:\")\n",
+    "print(df_jeju.info())\n",
+    "print(df_jeju.head())\n",
+    "\n",
+    "df_jeju.to_csv('/Volumes/X31/프로젝트/에너지 AI/Opensource-project-25-2/Data/jeju_renewable_energy.csv', index=False, encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0c9856da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           날짜       1시       2시       3시       4시       5시       6시       7시  \\\n",
+      "0  2023-09-01  676.803  636.803  608.006  588.079  584.287  596.389  626.774   \n",
+      "1  2023-09-02  704.337  661.538  632.087  606.112  599.265  609.831  626.341   \n",
+      "2  2023-09-03  704.855  659.923  630.403  611.188  600.094  610.799  627.273   \n",
+      "3  2023-09-04  690.752  644.835  619.173  601.070  593.155  610.972  649.510   \n",
+      "4  2023-09-05  711.801  666.938  637.280  617.405  613.037  625.891  662.059   \n",
+      "\n",
+      "        8시       9시  ...      15시      16시      17시      18시      19시  \\\n",
+      "0  703.674  778.657  ...  899.628  886.355  878.849  888.305  881.747   \n",
+      "1  654.214  714.058  ...  800.650  810.460  847.433  893.441  907.304   \n",
+      "2  655.509  691.637  ...  821.586  843.367  879.189  914.057  932.678   \n",
+      "3  719.760  804.442  ...  919.865  928.686  955.411  983.114  981.236   \n",
+      "4  740.345  798.268  ...  871.120  883.988  912.423  947.157  940.253   \n",
+      "\n",
+      "       20시      21시      22시      23시      24시  \n",
+      "0  897.276  880.430  836.734  796.892  757.224  \n",
+      "1  913.651  890.922  844.842  798.896  754.828  \n",
+      "2  936.084  905.501  854.048  800.839  750.348  \n",
+      "3  975.885  938.096  879.821  826.798  773.924  \n",
+      "4  931.387  891.761  840.697  794.743  747.710  \n",
+      "\n",
+      "[5 rows x 25 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_path = \"/Volumes/X31/프로젝트/에너지 AI/Opensource-project-25-2/Data/전력수요량/2024/시간별 제주전력수요_240331.csv\"\n",
+    "try:\n",
+    "    df = pd.read_csv(raw_path, encoding=\"utf-8\")\n",
+    "except UnicodeDecodeError:\n",
+    "    try:\n",
+    "        df = pd.read_csv(raw_path, encoding=\"cp949\")\n",
+    "    except Exception:\n",
+    "        df = pd.read_csv(raw_path, encoding=\"euc-kr\", errors=\"replace\")\n",
+    "\n",
+    "\n",
+    "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9fe203c6",
    "metadata": {},
    "source": [
     "# Data transformer"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d36e8f07",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -228,11 +411,99 @@
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1002171b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# --- 1. 한글 폰트 및 그래프 설정 (필수) ---\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# (이전 셀에서 '나눔고딕' 설치 및 런타임 재시작을 완료했다고 가정합니다)\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "# 그래프 스타일 설정\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "\n",
+    "# --- 2. 데이터 읽기 ---\n",
+    "file_name = '/Volumes/X31/프로젝트/Opensource-project-25-2/Data/제주도_전력 수요량 시간별 데이터_2021~2023.csv'\n",
+    "\n",
+    "try:\n",
+    "    df = pd.read_csv(file_name, encoding='utf-8')\n",
+    "    print(f\"'{file_name}' 파일 읽기 성공 (UTF-8)\")\n",
+    "except UnicodeDecodeError:\n",
+    "    df = pd.read_csv(file_name, encoding='cp949')\n",
+    "    print(f\"'{file_name}' 파일 읽기 성공 (CP949)\")\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"오류: '{file_name}'을(를) 찾을 수 없습니다.\")\n",
+    "    df = None\n",
+    "except Exception as e:\n",
+    "    print(f\"파일 읽기 중 오류 발생: {e}\")\n",
+    "    df = None\n",
+    "\n",
+    "if df is not None:\n",
+    "    # --- 3. 시간별 데이터 분석 ('거래시간' 기준) ---\n",
+    "    # '거래시간' 컬럼을 기준으로 그룹화\n",
+    "    # '전력 수요량(MWh)'의 평균(mean)을 계산합니다.\n",
+    "    hourly_avg = df.groupby('거래시간')['전력 수요량(MWh)'].mean().reset_index()\n",
+    "    \n",
+    "    # 컬럼 이름 변경 (시각화의 축 레이블을 위해)\n",
+    "    hourly_avg.rename(columns={\n",
+    "        '거래시간': '시간 (Hour)',\n",
+    "        '전력거래량(MWh)': '평균 전력거래량 (MWh)'\n",
+    "    }, inplace=True)\n",
+    "    \n",
+    "    print(\"\\n--- 시간대별 평균 전력거래량 ---\")\n",
+    "    print(hourly_avg.head()) # 데이터 확인\n",
+    "\n",
+    "    # --- 4. 시각화 (막대 그래프) ---\n",
+    "    plt.figure(figsize=(14, 7)) # 그래프 크기 조절\n",
+    "    \n",
+    "    # seaborn의 barplot을 사용하여 시각화\n",
+    "    # x축: '시간 (Hour)', y축: '전력 수요량 (MWh)'\n",
+    "    sns.barplot(data=hourly_avg, x='시간 (Hour)', y='전력 수요량(MWh)', palette='viridis')\n",
+    "\n",
+    "    # --- 5. 그래프 꾸미기 ---\n",
+    "    plt.title('Hourly Average Power Demand', fontsize=16, pad=20)\n",
+    "    plt.xlabel('Time (1am ~ 24pm)', fontsize=12)\n",
+    "    plt.ylabel('Mean energy(MWh)', fontsize=12)\n",
+    "    \n",
+    "    # x축 눈금 설정 (1시부터 24시까지)\n",
+    "    # 0부터 23까지의 인덱스를 1부터 24까지의 레이블로 변경\n",
+    "    plt.xticks(ticks=range(0, 24), labels=range(1, 25))\n",
+    "    \n",
+    "    # 그래프 표시\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef6fe544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install matplotlib seaborn"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
